<resources>
    <string name="app_name">KEDS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="nav_header_title">KE Design System</string>
    <string name="nav_header_subtitle">https://kalds.zeroheight.com/</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="action_settings">Settings</string>


    <!-- Navigation Menu names -->
    <string name="menu_home">Home</string>
    <string name="menu_typography">Typography</string>
    <string name="menu_buttons">Buttons</string>
    <string name="menu_lists">Lists</string>
    <string name="menu_dialogs">Dialogs</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="dialog_basic_title">안내사항</string>
    <string name="dialog_basic_sub_title">유의사항</string>
    <string name="dialog_basic_sub_description">승객 및 항공사 직원의 안전을 위하여 탑승수속시, 그리고 비행 중 기내에서 (식사시간을 제외한 상시) 마스크 또는 안면가리개를 착용하여 주시기 바랍니다.</string>
</resources>