<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
<!--        <item-->
<!--            android:id="@+id/nav_typography"-->
<!--            android:title="@string/menu_typography" />-->
        <item
            android:id="@+id/nav_buttons"
            android:title="@string/menu_buttons" />
<!--        <item-->
<!--            android:id="@+id/nav_lists"-->
<!--            android:title="@string/menu_lists" />-->
        <item
            android:id="@+id/nav_dialogs"
            android:title="@string/menu_dialogs" />
    </group>
</menu>