<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.dialogs.BasicAlertDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/dialog_basic_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_default="wrap">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ly_dialog_basic_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:lineHeight="28dp"
                android:lineSpacingExtra="10dp"
                android:text="@string/dialog_basic_title"
                android:textColor="@color/dialog_text_000000"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/btn_close"
                app:layout_constraintEnd_toStartOf="@+id/btn_close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_close" />

            <ImageButton
                android:id="@+id/btn_close"
                android:contentDescription="닫기"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="22dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_close_000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_dialog_basic_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:lineHeight="28dp"
            android:lineSpacingExtra="10dp"
            android:text="@string/dialog_basic_sub_title"
            android:textColor="@color/dialog_text_00256c"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ly_dialog_basic_top" />

        <TextView
            android:id="@+id/tv_dialog_basic_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:lineHeight="28dp"
            android:lineSpacingExtra="10dp"
            android:text="@string/dialog_basic_sub_description"
            android:textColor="@color/dialog_text_555555"
            android:textSize="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialog_basic_subtitle"
            app:layout_constraintBottom_toTopOf="@+id/ly_dialog_basic_bottom"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ly_dialog_basic_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintBottom_toTopOf="@+id/ly_dialog_basic_bottom_option"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/dialog_basic_button_ffffff"
                android:lineHeight="22dp"
                android:lineSpacingExtra="8dp"
                android:text="취소"
                android:textColor="@color/dialog_button_00256c"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_ok"
                app:layout_constraintEnd_toStartOf="@+id/btn_ok"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_ok" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/dialog_basic_button_294082"
                android:lineHeight="22dp"
                android:lineSpacingExtra="8dp"
                android:text="확인"
                android:textColor="@color/whiteff"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_cancel"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ly_dialog_basic_bottom_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dialog_bg_f8f9fc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_view"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/dialog_basic_checkbox"
                android:button="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="20dp"
                android:lineHeight="22dp"
                android:lineSpacingExtra="8dp"
                android:text="다시보지 않기"
                android:textColor="@color/black"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="@+id/cb_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cb_view"
                app:layout_constraintTop_toTopOf="@+id/cb_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>